Prepared repo to push changes to main

--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "export": "next export",
+   "deploy": "npm run build && cp out/index.html out/404.html && gh-pages -d out",
+
+    "lint": "next lint",
+    "homepage": "https://github.com/avadhi15/Flipr_Project.git"
   },
   "dependencies": {
     "mongoose": "^8.16.1",
@@ -19,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
