--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-   "deploy": "npm run build && cp out/index.html out/404.html && gh-pages -d out",
-
+    "deploy": "npm run build && cp out/index.html out/404.html && gh-pages -d out",
     "lint": "next lint",
     "homepage": "https://github.com/avadhi15/Flipr_Project.git"
   },
   "dependencies": {
+    "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
     "next": "15.3.4",
     "react": "^19.0.0",
